# attention-gru

./: .flake8  README.md  pyproject.toml  run.py
seq2seq_attn/: constants.py  data_prep.py  dataset.py  eval.py  models.py  run.py  train.py  utils.py
